[tool.poetry]
name = "similar-tones"
version = "0.1.0"
description = "Audio similarity search application for synthesizer presets"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchaudio = "^2.0.0"
transformers = "^4.30.0"
librosa = "^0.10.0"
soundfile = "^0.12.0"
numpy = "^1.24.0"
sentencepiece = "^0.1.99"
faiss-cpu = "^1.7.4"
pydub = "^0.25.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
similar-tones = "src.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"